# Metis

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/adapters/: claude.rs  codex.rs  gemini.rs  mod.rs  qwen.rs
src/commands/: adapters.rs  add_turn.rs  clean.rs  completion.rs  history.rs  init.rs  mod.rs  run.rs  status.rs  switch.rs
src/session/: clean.rs  context.rs  mod.rs  models.rs  store.rs
