[package]
name = "context"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
portable-pty = "0.8"
vt100 = "0.15"
crossterm = "0.27"
